--- a/release/appsettings.json
+++ b/release/appsettings.json
@@ -9,7 +9,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-8R96U36\\SQLEXPRESS;Database={database};Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=teambelc_products;Trusted_Connection=True;"
   }
-
-}
+ }
