--- a/release/ClientApp/package.json
+++ b/release/ClientApp/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "light-modal": "^1.1.0",
-    "mdbootstrap": "^4.10.1",
-    "mdbreact": "^4.23.1",
-    "node-sass": "^4.12.0",
-    "query-string": "^6.8.3",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
+    "mdbootstrap": "^4.14.1",
+    "mdbreact": "^4.25.4",
+    "node-sass": "^4.13.1",
+    "query-string": "^6.11.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
+    "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.1.51",
-    "react-router": "^5.1.1",
-    "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.2",
-    "redux": "^4.0.4",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -41,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2"
+    "@fortawesome/fontawesome-free": "^5.13.0"
   }
 }
