--- a/release/appsettings.json
+++ b/release/appsettings.json
@@ -9,7 +9,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-8R96U36\\SQLEXPRESS;Database={database};Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=93.125.99.180;Database=teambelc_products;User ID=teambelc_sergei;Password=@Yg95s7q;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Trusted_Connection=no"
   }
-
-}
+ }
