Добавление раздела "Наши продукты", исправления

--- a/release/appsettings.json
+++ b/release/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=93.125.99.180;Database=teambelc_products;User ID=teambelc_sergei;Password=@Yg95s7q;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Trusted_Connection=no"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=teambelc_products;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=93.125.99.180;Database=teambelc_products;User ID=teambelc_sergei;Password=@Yg95s7q;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Trusted_Connection=no"
   }
  }
