--- a/release/release.csproj
+++ b/release/release.csproj
@@ -7,6 +7,7 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
+    <UserSecretsId>4686244c-574a-4f39-9880-e628ab22f9be</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
